# DevOps-Course-Starter

./: .env.template  .env.test  .flake8  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.generateenv  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
ansible/: inventory  playbook.retry  playbook.yml
deployment_files/: .env.j2  install.sh  run_server.sh  todo_app.service
docs/diagrams/: TodoApp.drawio
features/: environment.py  homepage.feature
features/steps/: selenium_steps.py
scripts/: build.sh  clone-to-controller.sh  deploy.sh  docker-behave.sh  docker-tests.sh  generate_env.py  generate_env.sh  setup-apt.sh  setup-yum.sh  setup.sh
tests/integration/: test_endpoints.py
tests/unit/: test_trello_items.py
todo_app/: app.py  view_model.py
todo_app/data/: items_backend.py  session_items.py  trello_items.py
todo_app/data/trello/: trello_items.py  trello_request.py
todo_app/static/: styles.css
todo_app/templates/: index.html  layout.html
